# python-uinput

./: .bzrignore  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  INSTALL  MANIFEST.in  Makefile  Makefile.am  NEWS  NEWS.rst  PKG-INFO  README  README.in  README.md  README.rst  autogen.sh  configure.ac  setup.py
cmake/modules/: Findlibudev.cmake
debian/: changelog  control  copyright  python-uinput.udev  watch
examples/: Makefile  Makefile.am  basic.py  drop_privileges.py  hello.c  hellokbd.c  hellokbd.py  joystick.py  kbd.c  keyboard.c  keyboard.py  mouse.c  mouse.py
libsuinput/: NEWS  README  configure.ac
libsuinput/src/: Makefile.am  suinput.c  suinput.h
scripts/: parse-event-codes
src/: CMakeLists.txt  Makefile.am  __init__.py  abscodesmodule.c  bustypesmodule.c  capabilities.py  codes.c  devices.py  ev.py  evtypesmodule.c  keycodes.c  keycodesmodule.c  libsuinput.pc.in  pysuinput.c  relcodesmodule.c  suinput.c  suinput.h  suinputmodule.c
src/lib/: cUinput.c  uinput.py
tools/: genallenum.sh  genenum.py
