CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(libsuinput)

SET(CMAKE_MODULE_PATH ${libsuinput_SOURCE_DIR}/cmake/modules)
# add_definitions(-Wall -Werror -Wextra -pedantic -std=c89 -Wconversion)

ADD_SUBDIRECTORY(src)

INSTALL(DIRECTORY examples DESTINATION share/doc/suinput)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Simplified Uinput API")
SET(CPACK_PACKAGE_VENDOR "Tuomas Jorma Juhani R채s채nen")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "4")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_CONTACT "Tuomas Jorma Juhani R채s채nen <tuomas.j.j.rasanen@tjjr.fi>")
INCLUDE(CPack)
