AC_INIT([libsuinput],
	[0.6.1],
        [https://github.com/tuomasjjrasanen/libsuinput/issues],
        [libsuinput],
        [http://tjjr.fi/sw/libsuinput/])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_PROG_AR
AC_PROG_LIBTOOL
AC_PROG_CC
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([
        Makefile
        src/Makefile
        src/libsuinput.pc
])
AC_OUTPUT
