SET(suinput_SOURCES suinput.c)
SET(suinput_HEADERS suinput.h)
SET(suinput_SOVERSION 4)

ADD_LIBRARY(suinput SHARED ${suinput_SOURCES})

# Runs cmake/modules/Findlibudev.cmake
FIND_PACKAGE(libudev REQUIRED)
INCLUDE_DIRECTORIES(${libudev_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(suinput ${libudev_LIBRARIES})

SET_PROPERTY(TARGET suinput PROPERTY PUBLIC_HEADER ${suinput_HEADERS})
SET_PROPERTY(TARGET suinput PROPERTY SOVERSION ${suinput_SOVERSION})

INSTALL(TARGETS suinput LIBRARY DESTINATION lib PUBLIC_HEADER DESTINATION include)
